[gd_scene load_steps=4 format=3 uid="uid://bu84kxha4aovc"]

[ext_resource type="Script" uid="uid://ccap24upc5vao" path="res://assets/scripts/personagem.gd" id="1_b8pi2"]
[ext_resource type="Texture2D" uid="uid://cxfqstbbgrcf6" path="res://assets/sprites/spr_player_temp.png" id="1_cao2p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b8pi2"]
radius = 5.0
height = 16.0

[node name="Personagem" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_b8pi2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_cao2p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_b8pi2")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashTimer2" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashTimer2" to="." method="_on_dash_timer_2_timeout"]
